# eagine-guiplus

./: .gitmodules  CMakeLists.txt  README.rst
config/: EAGinePackageGUIplus.cmake
deploy/: CMakeLists.txt
deploy/dpkg/: CMakeLists.txt
deploy/dpkg/dev/: CMakeLists.txt  build-pkg.json.in  build-pkg.py.in  module-eagine.guiplus-link_glfw3.cmake
example/eagine/: CMakeLists.txt
example/eagine/guiplus/: 001_hello.cpp  001_hello_imgui.cpp  001_imgui_about.cpp  001_imgui_hello.cpp  002_imgui_demo.cpp  003_imgui_background.cpp  003_imgui_time_progress.cpp  004_imgui_background.cpp  005_imgui_system_load.cpp  006_imgui_font_resource.cpp  CMakeLists.txt  deb-changelog
source/modules/eagine/: CMakeLists.txt  api.cpp  api_traits.cpp  c_api.cpp  c_api_impl.cpp  config.cpp  constants.cpp  constants_impl.cpp  constants_test.cpp  deb-changelog  enum_types.cpp  from_string.cpp  guiplus.cpp  objects.cpp  result.cpp
submodules/: CMakeLists.txt
